--- a/package.json
+++ b/package.json
@@ -63,49 +63,48 @@
     "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.1.7",
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
-    "@coreui/icons": "0.3.0",
-    "bootstrap": "^4.3.1",
-    "chart.js": "2.7.3",
-    "core-js": "^2.6.5",
+    "@canvasjs/charts": "^3.7.13",
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/icons": "3.0.1",
+    "bootstrap": "^5.3.0",
+    "core-js": "^3.31.1",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "4.7.0",
-    "jquery": "3.3.1",
+    "jquery": "3.7.0",
     "pace-progress": "1.0.2",
-    "perfect-scrollbar": "^1.4.0",
+    "perfect-scrollbar": "^1.5.5",
     "popper.js": "^1.14.7",
-    "simple-line-icons": "2.4.1"
+    "simple-line-icons": "2.5.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-    "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.8",
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.22.9",
+    "autoprefixer": "^10.4.14",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
-    "browser-sync": "^2.26.3",
-    "chalk": "^2.4.2",
-    "clean-css-cli": "^4.2.1",
-    "copyfiles": "^2.1.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.14.1",
-    "eslint-plugin-compat": "^2.7.0",
+    "babel-plugin-transform-es2015-modules-strip": "^0.1.2",
+    "browser-sync": "^2.29.3",
+    "chalk": "^5.3.0",
+    "clean-css-cli": "^5.6.2",
+    "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-compat": "^4.1.4",
     "foreach-cli": "^1.8.1",
-    "js-beautify": "^1.8.9",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.10",
+    "js-beautify": "^1.14.9",
+    "node-sass": "^9.0.0",
+    "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.2",
-    "pug": "^2.0.3",
-    "rimraf": "^2.6.3",
-    "shelljs": "^0.8.3",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^2.0.0",
-    "stylelint-scss": "^3.5.3"
+    "postcss-cli": "^10.1.0",
+    "pug": "^3.0.2",
+    "rimraf": "^5.0.1",
+    "shelljs": "^0.8.5",
+    "stylelint": "^15.10.2",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^5.0.1"
   },
   "engines": {
     "node": ">=6"
