--- a/package.json
+++ b/package.json
@@ -63,48 +63,48 @@
     "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@canvasjs/charts": "^3.7.13",
-    "@coreui/coreui": "^4.2.6",
-    "@coreui/icons": "3.0.1",
-    "bootstrap": "^5.3.0",
-    "core-js": "^3.31.1",
-    "flag-icon-css": "^3.2.1",
-    "font-awesome": "4.7.0",
-    "jquery": "3.7.0",
-    "pace-progress": "1.0.2",
+    "@canvasjs/charts": "^3.7.40",
+    "@coreui/coreui": "^4.3.2",
+    "@coreui/icons": "^3.0.1",
+    "bootstrap": "^5.3.3",
+    "core-js": "^3.36.0",
+    "flag-icon-css": "^4.1.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
+    "pace-progress": "^1.0.2",
     "perfect-scrollbar": "^1.5.5",
-    "popper.js": "^1.14.7",
-    "simple-line-icons": "2.5.5"
+    "popper.js": "^1.16.1",
+    "simple-line-icons": "^2.5.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/preset-env": "^7.22.9",
-    "autoprefixer": "^10.4.14",
-    "babel-eslint": "^10.0.1",
+    "@babel/preset-env": "^7.23.9",
+    "autoprefixer": "^10.4.17",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.2",
-    "browser-sync": "^2.29.3",
+    "browser-sync": "^3.0.2",
     "chalk": "^5.3.0",
-    "clean-css-cli": "^5.6.2",
+    "clean-css-cli": "^5.6.3",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-compat": "^4.1.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-compat": "^4.2.0",
     "foreach-cli": "^1.8.1",
-    "js-beautify": "^1.14.9",
+    "js-beautify": "^1.15.1",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^10.1.0",
+    "postcss-cli": "^11.0.0",
     "pug": "^3.0.2",
-    "rimraf": "^5.0.1",
+    "rimraf": "^5.0.5",
     "shelljs": "^0.8.5",
-    "stylelint": "^15.10.2",
-    "stylelint-config-recommended-scss": "^12.0.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^5.0.1"
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.1.0"
   },
   "engines": {
     "node": ">=6"
